--- a/requirements.txt
+++ b/requirements.txt
@@ -1,29 +1,28 @@
-aiohttp==3.6.2
-APScheduler==3.6.3
-astroid==2.4.2
-async-timeout==3.0.1
-attrs==19.3.0
-beautifulsoup4==4.9.1
-chardet==3.0.4
-click==7.1.2
-discord==1.0.1
-discord.py==1.3.4
-idna==2.10
-isort==4.3.21
-joblib==0.16.0
-lazy-object-proxy==1.4.3
-mccabe==0.6.1
-multidict==4.7.6
-nltk==3.5
-pylint==2.6.0
-pytz==2020.1
-regex==2020.7.14
-six==1.15.0
-soupsieve==2.0.1
-textblob==0.15.3
-toml==0.10.1
-tqdm==4.48.0
-tzlocal==2.1
-websockets==8.1
-wrapt==1.12.1
-yarl==1.5.1
+aiohttp
+APScheduler
+astroid
+async-timeout
+attrs
+beautifulsoup4
+chardet
+click
+discord
+discord.py
+idna
+isort
+joblib
+lazy-object-proxy
+mccabe
+multidict
+nltk
+pytz
+regex
+six
+soupsieve
+textblob
+toml
+tqdm
+tzlocal
+websockets
+wrapt
+yarl
